doc: adicionando exemplos de como executar GC de cada versão LTS